src/test/ui/generator/metadata-sufficient-for-layout.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/metadata-sufficient-for-layout.rs:25:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

